Prevent parallax from bleeding over

--- a/styles/parallax.scss
+++ b/styles/parallax.scss
@@ -29,6 +29,7 @@
 .parallax {
   width: 100%;
   height: 80%;
+  position: relative;
 
   .parallax-item {
     max-width: 100%;
